rustdocs/errors/rust-bitcoin-primitives-src-opcodes.rs.txt
error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/primitives/src/opcodes.rs:10:5
   |
10 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
